# ocr_test

./: 2003.00744v1_image_pdf.txt  82251504.txt  README.md  pyproject.toml  test_scan.txt
examples/: 2003.00744v1_image_pdf.txt  ocr_sample.txt  test_scan.txt
ocr/: constants.py  custom_types.py  image_processing.py  main.py  text_processing.py  utils.py
