[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytesseract = "^0.3.8"
pathlib = "^1.0.1"
deskew = "^0.10.33"
setuptools = "^58.0.4"
opencv-contrib-python = "^4.5.3"
pdf2image = "^1.16.0"
click = "^8.0.1"
textblob = "^0.15.3"

[tool.poetry.scripts]
ocr_process = 'ocr.main:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
